[theme] fix scroll overflow-x

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -3,6 +3,5 @@
   display flex
   flex-direction column
   align-items center
-  width 100%
   height 40vh
-  padding 10vh 0
+  padding 10vh 10px
